--- a/src/Components/Calendar/Calendar/_Calendar.scss
+++ b/src/Components/Calendar/Calendar/_Calendar.scss
@@ -125,6 +125,10 @@
   transition: 0.5s ease-out;
 }
 
+.Calendar .Calendar__body .Calendar__prevDate {
+  background: rgba(192,192,192, 0.15);
+}
+
 .Calendar .Calendar__body .selected {
   border-left: 10px solid transparent;
   border-image: linear-gradient(45deg, #1a8fff 0%,#53cbf1 40%);
