--- a/src/Components/Nav/SideDrawer/_SideDrawer.scss
+++ b/src/Components/Nav/SideDrawer/_SideDrawer.scss
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 70%;
+  width: 50%;
   max-width: 400px;
   z-index: 200;
   transform: translateX(-100%);
@@ -17,7 +17,8 @@
 	list-style: none;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
+	margin-top: 20px;
 }
 
 .side-drawer a {
