--- a/src/Components/Classes/_Classes.scss
+++ b/src/Components/Classes/_Classes.scss
@@ -1,10 +1,8 @@
-.Classes__form-add,
-.Classes__form-update {
+.Class__form {
   @extend %form-shared;
 }
 
-.Classes__form-add,
-.Classes__form-update {
+.Class__form {
   border: 1px solid black;
   border-radius: 5px;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.5);
@@ -13,37 +11,34 @@
   background-color: $bg-color;
 }
 
-.classes__list {
+.classes ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.classes li {
   border: 1px solid black;
   border-radius: 5px;
   margin: 10px;
   padding: 20px 30px;
   max-width: 300px;
+  background: $bg-color;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
-  text-align: center;
-  margin: 30px auto 0px auto;
-  max-width: 900px;
+  color: $text-color;
 }
 
-.classes__list-items {
-  margin: 10px 0;
+.class-list__name {
+  font-weight: 800;
 }
 
-.classes__list-button {
-  margin: 10px;
-  background-color: $bg-color;
-  padding: 5px;
-  border-radius: 5px;
-  box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.5);
-  text-transform: uppercase;
+.class-list_items {
+  margin: 5px 0;
+  text-align: left;
 }
-  
-.classes__list-button:hover,
-.classes__list-button:focus {
-  background-color: $toolbar-hover-color;
-  color: $text-hover-color;
-  box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.5);
-  font-weight: 600;
-  transition: 0.3s;
-  border-radius: 7px;
+
+.class-list_items-header {
+  font-weight: 700;
 }
