--- a/src/MyClassroom.scss
+++ b/src/MyClassroom.scss
@@ -20,6 +20,7 @@
 
 @import './Components/Assignments/Assignments';
 @import './Components/Classes/Classes';
+@import './Components/StudentLogin/AddStudentLogin';
 
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 @import url(https://fonts.googleapis.com/css?family=Bubblegum+Sans&display=swap);
