--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,5 +7,6 @@ $text-color-light: #ccc;
 $border-color: #bebebe;
 $bg-color: #f9f9f9;
 $neutral-color: #fff;
+$button_bg_color: #CAE1F9;
 
 $font-stack: 'Bubblegum Sans', cursive;
