--- a/src/Components/Calendar/CalendarDate/_CalendarDate.scss
+++ b/src/Components/Calendar/CalendarDate/_CalendarDate.scss
@@ -11,11 +11,20 @@
 .calendar-date__return,
 .calendar-date__button {
   text-align: center;
-  border: 1px solid black;
+  border: 1px solid $border-color;
   border-radius: 5px;
   padding: 5px;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
   background-color: $bg-color;
+}
+.calendar-date__return:hover,
+.calendar-date__button:hover {
+  background-color: $button_bg_color;
+  color: $text-hover-color;
+  box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
+  font-weight: 600;
+  transition: 0.3s;
+  border-radius: 5px;
 }
 
 .calendar-date__button {
@@ -45,7 +54,7 @@
 }
 
 .calendar-date__items li {
-  border: 1px solid black;
+  border: 1px solid $border-color;
   border-radius: 5px;
   margin: 10px;
   padding: 20px 30px;
