--- a/src/Components/LandingPage/_Landing.scss
+++ b/src/Components/LandingPage/_Landing.scss
@@ -1,4 +1,4 @@
-.Landing_demo {
+.Landing__demo {
   @extend %buttons-shared;
 }
 
@@ -8,7 +8,7 @@
   font-size: 1.3em;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid black;
+  border: 1px solid $border-color;
   border-radius: 5px;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
   line-height: 1.5em;
@@ -36,24 +36,8 @@
   font-size: 1.3em;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid black;
+  border: 1px solid $border-color;
   border-radius: 5px;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
   line-height: 1.5em;
-}
-
-.Landing__demo button {
-  margin: 0 auto;
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 5px;
-  box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
-  background-color: $bg-color;
-  width: 150px;
-  margin: 20px; 
-}
-
-.Landing__demo button:hover {
-  border: 1px solid black;
-  color: $text-hover-color;
 }
