--- a/src/Components/LoginForm/_LoginForm.scss
+++ b/src/Components/LoginForm/_LoginForm.scss
@@ -4,7 +4,7 @@
 }
 
 .Login__form {
-  border: 1px solid black;
+  border: 1px solid $border-color;
   border-radius: 5px;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.5);
   padding: 20px;
