--- a/src/Components/Footer/_Footer.scss
+++ b/src/Components/Footer/_Footer.scss
@@ -3,5 +3,6 @@
   background-color: $main-color;
   text-align: center;
   padding: 10px 0;
-  margin: 40px 0 10px 0;
+  margin-top: 20px;
+  height: 41px;
 }
