--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,8 +5,10 @@ $text-color: #777;
 $toolbar-text-color: black;
 $text-color-light: #ccc;
 $border-color: #bebebe;
-$bg-color: #f9f9f9;
+$bg-color: #FFFFE0;
+$bg-button-color: #f9f9f9;
 $neutral-color: #fff;
-$button_bg_color: #CAE1F9;
+$button-bg-color: #CAE1F9;
+$button-hover-color: #f9f9f9;
 
 $font-stack: 'Bubblegum Sans', cursive;
