--- a/src/Components/LandingPage/_Landing.scss
+++ b/src/Components/LandingPage/_Landing.scss
@@ -12,7 +12,7 @@
   border-radius: 5px;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
   line-height: 1.5em;
-  background-color: $button-bg-color;
+  background-color: $bg-color;
 }
 
 .Landing__header {
@@ -37,7 +37,7 @@
   border: 1px solid $border-color;
   border-radius: 5px;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
-  background-color: $button-bg-color;
+  background-color: $bg-color;
   height: 280px;
 }
 
