--- a/src/_shared.scss
+++ b/src/_shared.scss
@@ -131,7 +131,7 @@
 
 %buttons-shared {
   .button {
-    background-color: $bg-color;
+    background-color: $button-bg-color;
     width: 180px;
     padding: 10px 15px;
     border: 1px solid $border-color;
@@ -143,7 +143,7 @@
  
   .button:hover,
   .button:focus {
-    background-color: $button_bg_color;
+    background-color: $button-hover-color;
     color: $text-hover-color;
     box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
     font-weight: 600;
