--- a/src/MyClassroom.scss
+++ b/src/MyClassroom.scss
@@ -14,6 +14,7 @@
 
 @import './Components/Calendar/Calendar/Calendar';
 @import './Components/Calendar/CalendarDate/CalendarDate';
+@import './Components/ToolTip/ToolTip';
 
 @import './Components/RegistrationForm/RegistrationForm';
 @import './Components/LoginForm/LoginForm';
