--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -11,4 +11,7 @@ $neutral-color: #fff;
 $button-bg-color: #CAE1F9;
 $button-hover-color: #f9f9f9;
 
+$tooltip-color: rgba(0,0,0,.7);
+$tooltip-text-color: #f9f9f9;
+
 $font-stack: 'Bubblegum Sans', cursive;
